Fix failing test examples for 2 links
- Adding alt text makes the element targetable with Playwright
- Removing onfocus context change makes elements maintain focus

--- a/app/before/home.html
+++ b/app/before/home.html
@@ -248,7 +248,7 @@
               <TD WIDTH=154px bgcolor="#EDEDED" id="home"
                 onMouseOver="switchImage('nav_home', './img/nav_home2.gif'); ChangeColor('home','#FFF')"
                 onMouseOut="switchImage('nav_home', './img/nav_home.gif'); ChangeColor('home','#EDEDED')">
-                <A onfocus="blur()" HREF="javascript:location.href='home.html';"><img name="nav_home" src=./img/nav_home.gif width=88
+                <A HREF="javascript:location.href='home.html';"><img name="nav_home" src=./img/nav_home.gif width=88 alt="Home"
                     height=27 hspace="15" border=0px></a></TD>
                 </TR>
                 <TR HEIGHT=1px>
@@ -258,8 +258,7 @@
               <TD WIDTH=154px bgcolor="#EDEDED" id="news"
                 onMouseOver="switchImage('nav_news', './img/nav_news2.gif'); ChangeColor('news','#FFF')"
                 onMouseOut="switchImage('nav_news', './img/nav_news.gif'); ChangeColor('news','#EDEDED')"><A
-                  onfocus="blur()"
-                  HREF="javascript:location.href='news.html';"><IMG SRC=./img/nav_news.gif name="nav_news"
+                  HREF="javascript:location.href='news.html';"><IMG SRC=./img/nav_news.gif name="nav_news" alt="News"
                     WIDTH=90 HEIGHT=21 hspace="12" BORDER=0px></A></TD>
             </TR>
             <TR HEIGHT=1px>
