Add navigation role

--- a/app/before/home.html
+++ b/app/before/home.html
@@ -236,7 +236,7 @@
         <TD COLSPAN=5>&nbsp;</TD>
       </TR>
     </TABLE>
-    <TABLE WIDTH=780px BORDER=0px CELLSPACING=0px CELLPADDING=0px BGCOLOR=WHITE>
+    <TABLE role="navigation" WIDTH=780px BORDER=0px CELLSPACING=0px CELLPADDING=0px BGCOLOR=WHITE>
       <TR WIDTH=780px>
         <TD WIDTH=155px BGCOLOR=#E4E4E4 VALIGN=TOP>
           <TABLE WIDTH=155px BORDER=0px CELLSPACING=0px CELLPADDING=0px>
